namespace Assets
{
    public static class strings
    {
        public const string SPEED = "Speed";
        public const string IS_WALKING = "isWalking";
        public const string IS_PHONING = "isPhoning";
        public const string VERTICAL = "Vertical";
        public const string HORIZONTAL = "Horizontal";
        public const string IK_PICKUP = "IKPickup";
    }
}
